--- a/experiments/odtrack/baseline_got.yaml
+++ b/experiments/odtrack/baseline_got.yaml
@@ -26,25 +26,31 @@ DATA:
     - GOT10K_train_full
     DATASETS_RATIO:
     - 1
-    SAMPLE_PER_EPOCH: 30000
+    SAMPLE_PER_EPOCH: 60000
   VAL:
     DATASETS_NAME:
     - GOT10K_official_val
     DATASETS_RATIO:
     - 1
-    SAMPLE_PER_EPOCH: 5000
+    SAMPLE_PER_EPOCH: 10000
 MODEL:
   PRETRAIN_FILE: "mae_pretrain_vit_base.pth"
   EXTRA_MERGER: False
   RETURN_INTER: False
   BACKBONE:
-    TYPE: vit_base_patch16_224_ce
+    TYPE: vit_base_patch16_224
     STRIDE: 16
     CE_LOC: [3, 6, 9]
     CE_KEEP_RATIO: [0.7, 0.7, 0.7]
     CE_TEMPLATE_RANGE: 'CTR_POINT'  # choose between ALL, CTR_POINT, CTR_REC, GT_BOX
     ADD_CLS_TOKEN: True             # use track_query mechanism
     ATTN_TYPE: concat               # Choose from [concat, separate]
+    # ---- START OF MODIFICATION ----
+    # Add MoE settings for this experiment
+    USE_MOE: True
+    MOE_TARGET_MODULES: ["Attention"] # This can be changed as needed
+    MOE_WHERE: 'every'                # Inject MoE layers into every other block
+    # ---- END OF MODIFICATION ----
   HEAD:
     TYPE: CENTER
     NUM_CHANNELS: 256
@@ -71,6 +77,10 @@ TRAIN:
   VAL_EPOCH_INTERVAL: 20
   WEIGHT_DECAY: 0.0001
   AMP: False
+  # ---- START OF MODIFICATION ----
+  # Add MoE aux loss weight for this experiment
+  MOE_AUX_WEIGHT: 0.01
+  # ---- END OF MODIFICATION ----
 TEST:
   EPOCH: 100
   SEARCH_FACTOR: 5.0
